--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <h1>Choose Your Tribe</h1>
         <div class="tribe-selection">
-            <button id="creative">Creative Tribe</button>
-            <button id="tech">Tech Tribe</button>
-            <button id="business">Business Tribe</button>
-            <button id="impact">Impact Tribe</button>
+            <button id="creative" type="button">Creative Tribe</button>
+            <button id="tech" type="button">Tech Tribe</button>
+            <button id="business" type="button">Business Tribe</button>
+            <button id="impact" type="button">Impact Tribe</button>
         </div>
         <canvas id="gameCanvas" width="800" height="400"></canvas>
         <div id="result"></div>
