Called game.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       <p><em>Mission Impossible: Defeat the Tech Tribe</em></p>
     </div>
     <p id="click-message">Click anywhere on the screen to continue</p>
+
+    <!-- Add the link to game.html -->
+    <div class="link-container">
+      <a href="./game.html" id="start-game">Start the Game</a>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
