--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </div>
     <p id="click-message">Click anywhere on the screen to continue</p>
 
-    <!-- Add the link to game.html -->
-    <div class="link-container">
-      <a href="./game.html" id="start-game">Start the Game</a>
-    </div>
-
-    <script src="script.js"></script>
+    <script>
+      // Add a click event listener to the entire body
+      document.body.addEventListener("click", () => {
+        window.location.href = "./game.html"; // Navigate to game.html
+      });
+    </script>
   </body>
 </html>
