Linked functional second page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script>
       // Add a click event listener to the entire body
       document.body.addEventListener("click", () => {
-        window.location.href = "./game.html"; // Navigate to game.html
+        window.location.href = "./prev_index.html"; // Navigate to game.html
       });
     </script>
   </body>
