--- a/prev_index.html
+++ b/prev_index.html
@@ -41,7 +41,7 @@
             position: relative;
             width: 90%;
             max-width: 800px;
-            height: 600px;
+            height: 450px;
             margin: 30px auto;
             border: 4px solid #ecf0f1;
             border-radius: 10px;
@@ -96,6 +96,17 @@
             top: -20px;
             background-size: cover;
         }
+
+        .health-label {
+            position: absolute;
+            width: 150px;
+            text-align: center;
+            color: #fff;
+            font-size: 1rem;
+            font-weight: bold;
+            top: -45px; /* Position the label above the health bar */
+        }
+
 
         .tech-icon {
             background-image: url('https://via.placeholder.com/30/3498db/ffffff?text=TT');
@@ -239,12 +250,17 @@
             opponent = { ...tribes.tech, element: createCharacter(tribes.tech, 600, 300) };
 
             player.healthBar = createHealthBar(100, 260, player.iconClass);
+            player.label = createLabel(100, 260, player.label);
+
             opponent.healthBar = createHealthBar(600, 260, opponent.iconClass);
+            opponent.label = createLabel(600, 260, opponent.label);
 
             gameContainer.appendChild(player.element);
+            gameContainer.appendChild(player.label);
             gameContainer.appendChild(player.healthBar);
 
             gameContainer.appendChild(opponent.element);
+            gameContainer.appendChild(opponent.label);
             gameContainer.appendChild(opponent.healthBar);
 
             document.getElementById('winnerMessage').textContent = '';
@@ -255,8 +271,8 @@
         function createCharacter(tribe, x, y) {
             const character = document.createElement('div');
             character.className = `character ${tribe.class}`;
-            character.style.left = `${x}px`;
-            character.style.top = `${y}px`;
+            character.style.left = `${x+50}px`;
+            character.style.top = `${y-70}px`;
             return character;
         }
 
@@ -265,19 +281,34 @@
 
             const icon = document.createElement('div');
             icon.className = `health-icon ${iconClass}`;
-            icon.style.left = `${x - 35}px`;
-            icon.style.top = `${y}px`;
+            icon.style.left = `${x - 45}px`;
+            icon.style.top = `${y-90}px`;
 
             const bar = document.createElement('div');
             bar.className = 'health-bar';
             bar.style.left = `${x}px`;
-            bar.style.top = `${y}px`;
+            bar.style.top = `${y-80}px`;
 
             container.appendChild(icon);
             container.appendChild(bar);
 
             return container;
         }
+
+        function createLabel(x, y, text) {
+            const label = document.createElement('div');
+            label.textContent = text;
+            label.style.position = 'absolute';
+            label.style.left = `${x}px`;
+            label.style.top = `${y - 130}px`; // Adjust position above the health bar
+            label.style.color = '#ecf0f1';
+            label.style.fontSize = '14px';
+            label.style.fontWeight = 'bold';
+            label.style.textAlign = 'center';
+            label.style.width = '150px'; // Match the width of the health bar
+            return label;
+        }
+
 
         function playerAttack() {
             hit(opponent, player.attackPower);
