--- a/prev_index.html
+++ b/prev_index.html
@@ -31,6 +31,7 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background 0.3s ease;
+            touch-action: manipulation;
         }
 
         button:hover {
